change version naming convention

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broadutils",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.0-alpha0",
   "description": "A package providing utilities covering a wide range of use cases.",
   "homepage": "https://github.com/natsie/broadutils#readme",
   "author": "Oghenevwegba Obire",
