--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "type": "module",
   "main": "dist/broadutils.js",
   "scripts": {
-    "build": "bunx tsgo",
+    "build": "bun run ./scripts/build.ts",
     "test": "bun test ./src/tests/node/",
     "test:web": "bun run ./src/tests/web/index.html"
   },
